--- a/StreamDeck-OSC.csproj
+++ b/StreamDeck-OSC.csproj
@@ -63,6 +63,7 @@
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
     <None Include="README.md" />
+    <None Include="Release\de.shells.osc.streamDeckPlugin" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="Images\categoryIcon%402x.png">
