--- a/manifest.json
+++ b/manifest.json
@@ -10,7 +10,7 @@
           "FontSize": "12"
         }
       ],
-      "SupportedInMultiActions": false,
+      "SupportedInMultiActions": true,
       "Tooltip": "Send any OSC command",
       "UUID": "de.shells.osc.pluginaction"
     }
@@ -25,7 +25,7 @@
   "Name": "Send OSC Command",
   "Icon": "Images/pluginIcon",
   "URL": "https://github.com/shells-dw/streamdeck-osc",
-  "Version": "1.0.0",
+  "Version": "1.1.0",
   "SDKVersion": 2,
   "Software": {
     "MinimumVersion": "4.3"
